--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_purple">#CF85F9</color>
+    <color name="title_color">#6B2895</color>
+    <color name="quiz_background">#9C56C6</color>
 </resources>
