added: conditional result text, new material themes, sourced colors for each page from theme.kt instead of colors.xml, few navigation changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="medium_purple">#9C56C6</color>
     <color name="light_purple">#CF85F9</color>
     <color name="medium_peach">#FF7F63</color>
-    <color name="light_peach">#FFC8A0</color>
+    <color name="light_peach">#FFC8BB</color>
     <color name="dark_cyan">#0B849E</color>
     <color name="light_blue">#83DAFF</color>
     <color name="light_lavendar">#FAF1FF</color>
