--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,6 @@
     <color name="dark_cyan">#0B849E</color>
     <color name="light_blue">#83DAFF</color>
     <color name="light_lavendar">#FAF1FF</color>
-    <color name="correct_answer">#00FF00</color>
-    <color name="incorrect_answer">#FF0000</color>
+    <color name="correct_answer">#77f7a8</color>
+    <color name="incorrect_answer">#f56c70</color>
 </resources>
